--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     ]
   },
   "dependencies": {
+    "@ant-design/x": "^1.4.0",
+    "antd": "^5.25.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
